@@ -3,9 +3,11 @@ package uk.gov.hmcts.divorce.document;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import uk.gov.hmcts.ccd.sdk.api.CaseDetails;
 import uk.gov.hmcts.ccd.sdk.type.Document;
 import uk.gov.hmcts.divorce.divorcecase.model.Applicant;
 import uk.gov.hmcts.divorce.divorcecase.model.CaseData;
+import uk.gov.hmcts.divorce.divorcecase.model.State;
 import uk.gov.hmcts.divorce.document.content.templatecontent.TemplateContent;
 import uk.gov.hmcts.divorce.document.model.DocumentType;
 import uk.gov.hmcts.divorce.document.print.documentpack.DocumentPackInfo;
@@ -17,9 +19,14 @@ import java.util.Map;
 import java.util.Optional;
 
 import static java.time.LocalDateTime.now;
+import static java.util.stream.Collectors.toList;
 import static org.springframework.util.CollectionUtils.firstElement;
 import static uk.gov.hmcts.divorce.caseworker.service.task.util.FileNameUtil.formatDocumentName;
+import static uk.gov.hmcts.divorce.document.DocumentConstants.CERTIFICATE_OF_ENTITLEMENT_JUDICIAL_SEPARATION_TEMPLATE_ID;
+import static uk.gov.hmcts.divorce.document.DocumentConstants.CERTIFICATE_OF_ENTITLEMENT_NAME;
+import static uk.gov.hmcts.divorce.document.DocumentConstants.CERTIFICATE_OF_ENTITLEMENT_TEMPLATE_ID;
 import static uk.gov.hmcts.divorce.document.DocumentUtil.getLettersBasedOnContactPrivacy;
+import static uk.gov.hmcts.divorce.document.model.DocumentType.CERTIFICATE_OF_ENTITLEMENT;
 
 @Component
 @RequiredArgsConstructor
@@ -30,6 +37,32 @@ public class DocumentGenerator {
     private final CaseDataDocumentService caseDataDocumentService;
     private final Clock clock;
 
+    public void generateAndStoreCaseDocument(DocumentType documentType,
+                                             String templateId,
+                                             String templateName,
+                                             CaseData caseData,
+                                             long caseId) {
+        generateAndStoreCaseDocument(documentType, templateId, templateName, caseData, caseId, null);
+    }
+
+    public void generateAndStoreCaseDocument(DocumentType documentType,
+                                             String templateId,
+                                             String templateName,
+                                             CaseData caseData,
+                                             long caseId,
+                                             Applicant applicant) {
+        //this is a case document like FO Granted or CO Granted so is not specific to an applicant
+        var templateContent = getTemplateContent(caseId, applicant, caseData, documentType, templateId);
+
+        var generatedDocument = caseDataDocumentService.renderDocument(templateContent,
+            caseId,
+            templateId,
+            caseData.getApplicant1().getLanguagePreference(),
+            formatDocumentName(caseId, templateName, now(clock)));
+
+        caseDataDocumentService.updateCaseData(caseData, documentType, generatedDocument, caseId, templateId);
+    }
+
     public List<Letter> generateDocuments(final CaseData caseData,
                                           final long caseId,
                                           final Applicant applicant,
@@ -39,7 +72,7 @@ public class DocumentGenerator {
         return documentPackInfo.documentPack().entrySet().stream()
             .map(entry -> toLetter(entry, caseData, caseId, applicant, documentPackInfo.templateInfo()))
             .flatMap(Optional::stream)
-            .toList();
+            .collect(toList());
     }
 
     private Optional<Letter> toLetter(final Map.Entry<DocumentType, Optional<String>> entry,
@@ -80,19 +113,7 @@ public class DocumentGenerator {
                                       final String templateId,
                                       final String docName) {
 
-        List<TemplateContent> relevantTemplateContent = allTemplateContentHandlers.stream()
-            .filter(handler -> handler.getSupportedTemplates().contains(templateId))
-            .toList();
-
-        if (relevantTemplateContent.size() != 1) {
-            throw new IllegalStateException(
-                String.format("Multiple template content providers found for given templateId %s for case %s", templateId, caseId)
-            );
-        }
-
-        log.info("Got the relevant template content bean for doctype {} for case {}", documentType, caseId);
-
-        Map<String, Object> templateContent = relevantTemplateContent.get(0).getTemplateContent(caseData, caseId, applicant);
+        Map<String, Object> templateContent = getTemplateContent(caseId, applicant, caseData, documentType, templateId);
 
         Document generatedDocument = caseDataDocumentService.renderDocument(templateContent,
             caseId,
@@ -105,4 +126,45 @@ public class DocumentGenerator {
         return generatedDocument;
     }
 
+
+    private Map<String, Object> getTemplateContent(long caseId,
+                                                   Applicant applicant,
+                                                   CaseData caseData,
+                                                   DocumentType documentType,
+                                                   String templateId) {
+        List<TemplateContent> relevantTemplateContent = allTemplateContentHandlers.stream()
+                .filter(handler -> handler.getSupportedTemplates().contains(templateId))
+                .toList();
+        if (relevantTemplateContent.size() != 1) {
+            throw new IllegalStateException(
+                    String.format("Multiple template content providers found for given templateId %s for case %s", templateId, caseId)
+            );
+        }
+
+        log.info("Got the relevant template content bean for doctype {} for case {}", documentType, caseId);
+
+        return relevantTemplateContent.get(0).getTemplateContent(caseData, caseId, applicant);
+    }
+
+    public void generateCertificateOfEntitlement(CaseDetails<CaseData, State> details) {
+        CaseData caseData = details.getData();
+
+        generateAndStoreCaseDocument(
+                CERTIFICATE_OF_ENTITLEMENT,
+                caseData.isJudicialSeparationCase()
+                        ? CERTIFICATE_OF_ENTITLEMENT_JUDICIAL_SEPARATION_TEMPLATE_ID
+                        : CERTIFICATE_OF_ENTITLEMENT_TEMPLATE_ID,
+                CERTIFICATE_OF_ENTITLEMENT_NAME,
+                caseData,
+                details.getId()
+        );
+
+        var regeneratedCertificateOfEntitlement =
+                caseData.getDocuments().getDocumentsGenerated()
+                        .stream()
+                        .filter(doc -> doc.getValue().getDocumentType().equals(CERTIFICATE_OF_ENTITLEMENT))
+                        .findFirst().orElseThrow();
+
+        caseData.getConditionalOrder().setCertificateOfEntitlementDocument(regeneratedCertificateOfEntitlement.getValue());
+    }
 }
